[package]
name = "proyecto"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra-glm = "0.18.0"
minifb = "0.26.0"
tobj = "4.0.2"
fastnoise-lite = "1.1.1"
rand = "0.8.5"
noise = "0.9"
image = "0.23"
rayon = "1.5"

[profile.release]
opt-level = 3         
lto = "fat"           
codegen-units = 1     